# IndieGuitarFX

./: BUILD_INSTRUCTIONS.md  CMakeLists.txt  IndieGuitarFX.jucer  setup_windows.bat
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: Chorus.cpp  Chorus.h  Compressor.cpp  Compressor.h  Delay.cpp  Delay.h  EQ.cpp  EQ.h  Overdrive.cpp  Overdrive.h  Reverb.cpp  Reverb.h  ToneAnalyzer.cpp  ToneAnalyzer.h
Source/GUI/: EffectStrip.cpp  EffectStrip.h  KnobLookAndFeel.cpp  KnobLookAndFeel.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  ToneAnalyzerPanel.cpp  ToneAnalyzerPanel.h
